test/expected/typedef_ai.out
typedef auto int SI
        ^
9: error: "typedef auto int" is illegal for built-in type
